--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "libs.html" %}
+{% extends "layout.html" %}
 {% block form %}
         <div class="card" style="width: 18rem;">
           <div class="card-body">
