--- a/flask_auth/templates/page.html
+++ b/flask_auth/templates/page.html
@@ -19,14 +19,19 @@
 
 <div class="card">
 	<div class="card-body p-5">
-		<div class="text-center mb-4">
-			<a href="{{ url_for('register') }}" class="btn btn-outline-success btn-block"><i
+		<div class="d-grid gap-2">
+			<div class="text-center mb-4">
+			<a href="{{ url_for('register') }}" class="btn btn-success btn-block"><i
 					class="far fa-address-card"></i> Register</a>
 		</div>
+
 		<div class="text-center">
-			<a href="{{ url_for('login') }}" class="btn btn-outline-info btn-block"><i class="fas fa-sign-in-alt"></i>
+			<a href="{{ url_for('login') }}" class="btn btn-primary btn-block"><i class="fas fa-sign-in-alt"></i>
 				Login</a>
 		</div>
+		</div>
+		
+
 	</div>
 </div>
 
