--- a/flask_auth/templates/login.html
+++ b/flask_auth/templates/login.html
@@ -12,7 +12,10 @@
 							<label for="inputPassword">Password</label>
 							<input name="passwd" type="password" id="inputPassword" class="form-control mb-2" placeholder="Password" required>
 						</div>
-							<button class="btn btn-outline-info btn-block " type="submit">Login</button>
+						<div class="d-grid gap-2">
+							<button class="btn btn-success btn-block " type="submit">Login</button>
+						</div>
+							
 						<hr>
 							<a href="{{ url_for('register') }}" class="text-center">Don’t have an account? Register</a>
 					 </form>
