Added protected route

--- a/flask_auth/templates/layout.html
+++ b/flask_auth/templates/layout.html
@@ -19,7 +19,7 @@
           }
 	</style>
               <main role="main">
-                  <div class="row d-block">
+                  <div class="row d-block text-center">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                     {% for category, message in messages %}
@@ -36,7 +36,7 @@
                     </div>
 
                     <footer class="footer fixed-bottom">
-                      <div class="container">
+                      <div class="container text-center">
                         <span>Abduaziz Ziyodov</span>
                       </div>
 
