--- a/flask_auth/templates/login.html
+++ b/flask_auth/templates/login.html
@@ -1,24 +1,30 @@
 {% extends "layout.html" %}
-{% block form %}		
-			<div class="card center" style="width: 18rem;">
-				 <div class="card-body">
-				   <h4 class="card-title text-center">Login</h4>
-					 <form method="POST">
-					      <div class="form-label-group">
-							<label for="inputEmail">Email address</label>
-							<input name="email" type="email" id="inputEmail" class="form-control mb-2" placeholder="Email address" required autofocus>
-						</div>
-						<div class="form-label-group">
-							<label for="inputPassword">Password</label>
-							<input name="passwd" type="password" id="inputPassword" class="form-control mb-2" placeholder="Password" required>
-						</div>
-						<div class="d-grid gap-2">
-							<button class="btn btn-success btn-block " type="submit">Login</button>
-						</div>
-							
-						<hr>
-							<a href="{{ url_for('register') }}" class="text-center">Don’t have an account? Register</a>
-					 </form>
-					</div>
-				</div>
+{% block form %}
+<div class="card center" style="width: 18rem;">
+	<div class="card-body">
+		<h4 class="card-title text-center">Login</h4>
+		<form method="POST">
+			<div class="form-label-group">
+				<label for="inputEmail">Email address</label>
+				<input name="email" type="email" id="inputEmail" class="form-control mb-2" placeholder="Email address"
+					required autofocus>
+			</div>
+			<div class="form-label-group">
+				<label for="inputPassword">Password</label>
+				<input name="passwd" type="password" id="inputPassword" class="form-control mb-2" placeholder="Password"
+					required>
+			</div>
+			<div class="d-grid gap-2">
+				<button class="btn btn-success btn-block " type="submit">Login</button>
+			</div>
+
+			<hr>
+			<div class="text-center">
+				<a href="{{ url_for('register') }}" style="font-size:10px;text-decoration:none;" class="text-center">Don’t have an account?
+					Register</a>
+			</div>
+
+		</form>
+	</div>
+</div>
 {% endblock form %}
