--- a/flask_auth/templates/register.html
+++ b/flask_auth/templates/register.html
@@ -23,7 +23,10 @@
                 </div>
                   
                 <hr>
-                  <a href="{{ url_for('login') }}" class="text-center">Already have an account? Login</a>
+                <div class="text-center">
+                  <a href="{{ url_for('login') }}" style="font-size:10px;text-decoration:none;" class="text-center">Already have an account? Login</a>
+                </div>
+                  
               </form>
            </div>
          </div>
